...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingTop="2dp"
...
