...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputReleaseDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/inputGenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/inputRecordLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/btnCreateAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSuccessContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textSuccessTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textSuccessAlbumName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/textSuccessGenreValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/textSuccessYearValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
