...
                <TextView
                    android:id="@+id/textAlbumGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"
                    tools:text="Rock"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
...
